# simple-http-server

./: Cargo.toml  LICENSE  README.md
workspace/: Cargo.toml
workspace/simple-http-server/: Cargo.toml
workspace/simple-http-server-epoll/: Cargo.toml
workspace/simple-http-server-epoll/src/: CreationError.rs  EventLoop.rs  InvalidPathReason.rs  RawFdExt.rs  SpecialFileOpenError.rs  StructReadError.rs  StructWriteError.rs  event_loop.rs  lib.android_emscripten_fuschia_linux_uclibc.rs  lib.rs  path_bytes_without_trailing_nul.rs  signal_handling_event_loop.rs
workspace/simple-http-server-epoll/src/android_emscripten_fuschia_linux_solaris_uclibc/: EPoll.rs  EPollAddError.rs  EPollCreationError.rs  EPollTimeOut.rs  EPollWaitError.rs  epoll_create1.rs  epoll_ctl.rs  epoll_event.rs  epoll_pwait.rs  mod.rs
workspace/simple-http-server-epoll/src/character_device/: CharacterDeviceFileDescriptor.rs  mod.rs
workspace/simple-http-server-epoll/src/character_devices_and_terminals/: BackspaceDelay.rs  BaudRate.rs  BitsPerByte.rs  CanonicalEchoKillCharacter.rs  CanonicalSettings.rs  CarriageReturnDelay.rs  Character.rs  CharacterDeviceFileDescriptor.rs  CharacterSettings.rs  ControlModeFlagSettings.rs  CurrentTerminalSettings.rs  Echo.rs  FlagSetting.rs  FormFeedDelay.rs  HorizontalTabDelay.rs  InputModeFlag.rs  InputModeFlagSettings.rs  LocalModeFlagSettings.rs  MiscellaneousControlModeFlag.rs  MiscellaneousControlModeFlagSettings.rs  MiscellaneousLocalModeFlag.rs  MiscellaneousLocalModeFlagSettings.rs  MiscellaneousOutputModeFlag.rs  MiscellaneousOutputModeFlagSettings.rs  MultipleBits.rs  NewLineDelay.rs  OutputModeFlagSettings.rs  Parity.rs  SignalRaising.rs  StopBits.rs  TerminalFileDescriptor.rs  TerminalMode.rs  TerminalSettings.rs  VerticalTabDelay.rs  WhenToChangeTerminalAttributes.rs  mod.rs
workspace/simple-http-server-epoll/src/epoll/: EPollAddFlags.rs  EPollCreationError.rs  EPollDeleteError.rs  EPollEventFlags.rs  EPollFileDescriptor.rs  EPollModifyError.rs  EPollModifyFlags.rs  EPollRegistrationError.rs  EventPoll.rs  Reactor.rs  epoll_ctl.rs  epoll_data_t.rs  epoll_event.rs  mod.rs
workspace/simple-http-server-epoll/src/eventfd/: EventCreationError.rs  EventFileDescriptor.rs  EventReadError.rs  EventWriteError.rs  eventfd.rs  mod.rs
workspace/simple-http-server-epoll/src/fanotify/: EventFlags.rs  FanotifyFileDescriptor.rs  FanotifyMarkError.rs  FanotifyReadOrWrite.rs  FileStatusFlags.rs  MarkEventFlags.rs  MarkFlags.rs  MarkPath.rs  fanotify_event_metadata.rs  fanotify_init.rs  fanotify_mark.rs  mod.rs
workspace/simple-http-server-epoll/src/inotify/: InotifyAddError.rs  InotifyAddWatchFlags.rs  InotifyEventFlags.rs  InotifyFileDescriptor.rs  InotifyWatchDescriptor.rs  inotify_add_watch.rs  inotify_init1.rs  mod.rs
workspace/simple-http-server-epoll/src/mq/: MessagePriority.rs  MessageQueue.rs  MessageQueueCreateReadOrWrite.rs  MessageQueueCreateSendOrReceive.rs  MessageQueueCreateSettings.rs  MessageQueueFileDescriptor.rs  MessageQueueUnlinkError.rs  OpenOrCreateMessageQueue.rs  OptionalMessageQueueCreateSettings.rs  Receive.rs  ReceiveMessageQueueFileDescriptor.rs  Send.rs  SendAndReceiveMessageQueueFileDescriptor.rs  SendMessageQueueFileDescriptor.rs  mod.rs  mq_attr.rs  mq_getattr.rs  mq_open.rs  mq_timedreceive.rs
workspace/simple-http-server-epoll/src/pipes/: FifiOpenError.rs  ReceivePipeFileDescriptor.rs  SendPipeFileDescriptor.rs  mod.rs  pipe2.rs  read.rs  write.rs
workspace/simple-http-server-epoll/src/pipes_and_fifos/: FifoOpenError.rs  InvalidFifoPathReason.rs  ReceivePipeFileDescriptor.rs  SendPipeFileDescriptor.rs  SpliceRecipient.rs  SpliceSender.rs  mod.rs
workspace/simple-http-server-epoll/src/posix_message_queues/: OpenOrCreatePosixMessageQueue.rs  OptionalPosixMessageQueueCreateSettings.rs  PosixMessagePriority.rs  PosixMessageQueue.rs  PosixMessageQueueCreateSendOrReceive.rs  PosixMessageQueueCreateSettings.rs  PosixMessageQueueFileDescriptor.rs  PosixMessageQueueUnlinkError.rs  Receive.rs  ReceivePosixMessageQueueFileDescriptor.rs  Send.rs  SendAndReceivePosixMessageQueueFileDescriptor.rs  SendPosixMessageQueueFileDescriptor.rs  mod.rs
workspace/simple-http-server-epoll/src/signalfd/: AllSignalReactor.rs  ArithmeticErrorCode.rs  BusCode.rs  BusFaultData.rs  ChildCode.rs  ChildData.rs  Code.rs  EmulatorTrapCode.rs  FaultData.rs  GenericSignalData.rs  IllegalInstructionCode.rs  PollCode.rs  PollData.rs  SIGRT.rs  SI_.rs  SegmentationFaultCode.rs  SignalCreationError.rs  SignalEPollRegistrationError.rs  SignalFileDescriptor.rs  SignalHandler.rs  SignalReadError.rs  SpecificSignalData.rs  SystemCallCode.rs  SystemCallData.rs  TrapCode.rs  UserspaceSignalCode.rs  mod.rs  signalfd_siginfo.rs
workspace/simple-http-server-epoll/src/socket/: AcceptedConnection.rs  AcceptedConnectionEnum.rs  ConnectionFailedReason.rs  Credentials.rs  DatagramClientSocketFileDescriptor.rs  DatagramClientSocketFileDescriptorEnum.rs  DatagramServerListenerSocketFileDescriptor.rs  DatagramServerListenerSocketFileDescriptorEnum.rs  ErrorFlags.rs  EventLoop.rs  FilePathInvalidReason.rs  InfinibandSocketAddress.rs  MSG_.rs  MessageHeadersIterator.rs  MutableMessageHeadersIterator.rs  NewSocketClientError.rs  NewSocketServerListenerError.rs  ReceiveFlags.rs  SCM_.rs  (+41 more)
workspace/simple-http-server-vectored-buffers/: Cargo.toml
workspace/simple-http-server-vectored-buffers/src/: Allocation.rs  AllocationObserver.rs  AllocationObserverIdentifier.rs  Buffer.rs  BufferArena.rs  BufferHeader.rs  BufferIndex.rs  BufferReference.rs  Bytes.rs  ExclusiveToOffset.rs  ImmutableVectoredBufferSlice.rs  ImmutableVectoredBufferSliceIterator.rs  InclusiveFromOffset.rs  MutableVectoredBufferSlice.rs  MutableVectoredBufferSliceIterator.rs  RingBuffer.rs  RingBufferMaximumSize.rs  Status.rs  VectoredBuffer.rs  VectoredBufferOffset.rs  lib.rs
workspace/simple-http-server/src/: ConnectionObserver.rs  ConnectionObserverConnectError.rs  HttpGetUser.rs  MainLoopError.rs  ReadBufferUser.rs  ServedClientConnection.rs  ServedClientConnections.rs  SimpleHttpsServer.rs  Terminate.rs  lib.rs
(+271 files in other folders)
