# This file is part of simple-http-server. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/simple-http-server/master/COPYRIGHT. No part of simple-http-server, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2018 The developers of simple-http-server. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/simple-http-server/master/COPYRIGHT.


[package]
name = "simple-http-server-epoll"
description = "A wrapper around epoll for a simple HTTPS server in Rust which supports client authentication"
keywords = ["simple", "epoll", "https", "web", "server"]
categories = ["asynchronous", "network-programming", "os::unix-apis"]
license = "MIT"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
homepage = "https://github.com/lemonrock/simple-http-server"
repository = "https://github.com/lemonrock/simple-http-server.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml"]
readme = "README.md"
publish = false
version = "0.0.0"

[target.'cfg(any(target_os = "android", target_os = "emscripten", target_os = "fuschia", target_os = "linux", target_os = "solaris",  target_env = "uclibc"))'.dependencies]
bitflags = "^1.0"
errno = "^0.2.4"
libc = "^0.2.44"
likely = "^0.1"
